--- a/crypto2025/biblio.bib
+++ b/crypto2025/biblio.bib
@@ -890,3 +890,39 @@
   bibsource    = {dblp computer science bibliography, https://dblp.org}
 }
 
+
+
+@article{DBLP:journals/jcss/CarterW79,
+  author       = {Larry Carter and
+                  Mark N. Wegman},
+  title        = {Universal Classes of Hash Functions},
+  journal      = {J. Comput. Syst. Sci.},
+  volume       = {18},
+  number       = {2},
+  pages        = {143--154},
+  year         = {1979},
+  url          = {https://doi.org/10.1016/0022-0000(79)90044-8},
+  doi          = {10.1016/0022-0000(79)90044-8},
+  timestamp    = {Tue, 16 Feb 2021 14:04:40 +0100},
+  biburl       = {https://dblp.org/rec/journals/jcss/CarterW79.bib},
+  bibsource    = {dblp computer science bibliography, https://dblp.org}
+}
+
+
+
+@article{DBLP:journals/jcss/WegmanC81,
+  author       = {Mark N. Wegman and
+                  Larry Carter},
+  title        = {New Hash Functions and Their Use in Authentication and Set Equality},
+  journal      = {J. Comput. Syst. Sci.},
+  volume       = {22},
+  number       = {3},
+  pages        = {265--279},
+  year         = {1981},
+  url          = {https://doi.org/10.1016/0022-0000(81)90033-7},
+  doi          = {10.1016/0022-0000(81)90033-7},
+  timestamp    = {Tue, 16 Feb 2021 14:04:28 +0100},
+  biburl       = {https://dblp.org/rec/journals/jcss/WegmanC81.bib},
+  bibsource    = {dblp computer science bibliography, https://dblp.org}
+}
+
