better description of Classic McEliece

--- a/crypto2025/biblio.bib
+++ b/crypto2025/biblio.bib
@@ -926,3 +926,33 @@
   bibsource    = {dblp computer science bibliography, https://dblp.org}
 }
 
+@techreport{McEliece1978,
+  author       = {Robert J. McEliece},
+  title        = {A public-key cryptosystem based on algebraic coding theory},
+  institution  = {NASA},
+  year         = {1978},
+  type         = {Technical report},
+  url          = {https://ipnpr.jpl.nasa.gov/progress_report2/42-44/44N.PDF}
+}
+
+@article{Niederreiter1986,
+  author    = {Harald Niederreiter},
+  title     = {Knapsack-type cryptosystems and algebraic coding theory},
+  journal   = {Problems of Control and Information Theory},
+  volume    = {15},
+  number    = {2},
+  pages     = {159--166},
+  year      = {1986}
+}
+
+@misc{ClassicMcEliece2022,
+  author      = {Daniel J. Bernstein and 
+      Nadia Heninger and 
+      Tanja Lange and 
+      Michael {van Beirendonck} and others},
+  title       = {Classic McEliece: Specification},
+  year        = {2022},
+  month       = {October},
+  url         = {https://classic.mceliece.org/mceliece-spec-20221023.pdf},
+  note        = {Accessed: 2025-01-29}
+}
